--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -158,3 +158,13 @@ a {
 .store-card:hover {
   transform: translateY(-3px);
 }
+
+.logo {
+  font-size: 36px;
+}
+
+@media (max-width: 350px) {
+  .logo {
+    font-size: 24px;
+  }
+}
